perses-trec/na-323/build_log.txt
> Task :clean

> Task :compileJava FAILED
/Users/lain/repos/research/perses-evaluation/perses-trec/na-323/output/src/main/java/com/cogvio/time/na-error/src/main/java/com/cogvio/time/MutableClock.java:7: error: [NullAway] initializer method does not guarantee @NonNull fields instant, zone are initialized along all control-flow paths (remember to check for exceptions or early returns).
  a() {}
  ^
    (see http://t.uber.com/nullaway )
1 error

[Incubating] Problems report is available at: file:///Users/lain/repos/research/perses-evaluation/perses-trec/na-323/output/src/main/java/com/cogvio/time/na-error/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /Users/lain/repos/research/perses-evaluation/perses-trec/na-323/output/src/main/java/com/cogvio/time/na-error/src/main/java/com/cogvio/time/MutableClock.java:7: error: [NullAway] initializer method does not guarantee @NonNull fields instant, zone are initialized along all control-flow paths (remember to check for exceptions or early returns).
    a() {}
    ^
      (see http://t.uber.com/nullaway )
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 970ms
2 actionable tasks: 2 executed
